--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: POC-10 EC2 CI/CD Deploy
+name: Deploy HTML to Nginx
 
 on:
   push:
@@ -10,48 +10,40 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1 - Checkout repo
-      - name: Checkout Code
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      # Step 2 - SSH into EC2 and deploy
-      - name: Deploy to EC2 via SSH
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.EC2_IP }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          port: 22
-          script: |
-            echo "Connected to EC2"
+    - name: Install Nginx
+      run: |
+        sudo apt update
+        sudo apt install -y nginx
 
-            # Create a app dir, if exists mkdir does nothing like no error
-            sudo mkdir -p /var/www/poc10-app
+    - name: Remove default index file
+      run: |
+        sudo rm -f /var/www/html/index.nginx-debian.html
 
-            # CHOWN of that app
-            sudo chown ${{ secrets.EC2_USER }}:${{ secrets.EC2_USER }} /var/www/poc10-app
+    - name: Copy custom index.html file
+      run: |
+        sudo cp ./index.html /var/www/html/
 
-            # Go to the app dir
-            cd /var/www/poc10-app || exit 1
+    - name: Configure Nginx
+      run: |
+        sudo tee /etc/nginx/sites-available/default > /dev/null <<'EOF'
+server {
+    listen 80 default_server;
+    listen [::]:80 default_server;
 
+    root /var/www/html;
+    index index.html;
 
-            # check if .git is there in the app
-            if [ -d .git ]; then
-                echo "Git repo found!"
-                echo "Pulling latest changes"
+    server_name _;
 
-                git pull
-            else
-                echo "Git repo not found!"
-                echo "Cloning the repo"
+    location / {
+        try_files $uri $uri/ =404;
+    }
+}
+EOF
 
-                git clone "https://github.com/NikithaMalthumkar/Poc10" .
-            fi
-
-            echo "Installing npm..."
-            npm i
-
-            echo "Starting/Reloading PM2"
-            pm2 start ecosystem.config.js || pm2 reload ecosystem.config.js
-
-            echo "Deployment Completed Succesfully"
+    - name: Restart Nginx
+      run: |
+        sudo systemctl restart nginx
